--- a/crates/tacgen/Cargo.toml
+++ b/crates/tacgen/Cargo.toml
@@ -1,13 +1,10 @@
 [package]
 authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
 edition = "2018"
-name = "azuki-tac"
+name = "azuki-tacgen"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-generational-arena = "0.2"
-indexmap = "1"
-lexpr = "0.2.5"
-smol_str = "0.1"
+azuki-tac = {path = "../tac"}
