--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,14 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+azuki-syntax = {path = "crates/syntax"}
 azuki-tac = {path = "crates/tac"}
+azuki-tacgen = {path = "crates/tacgen"}
 
 [workspace]
 members = [
-  "crates/*",
+  ".",
+  "./crates/syntax",
+  "./crates/tac",
+  "./crates/tacgen",
 ]
