--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,5 @@ azuki-tacgen = {path = "crates/tacgen"}
 [workspace]
 members = [
   ".",
-  "./crates/syntax",
-  "./crates/tac",
-  "./crates/tacgen",
+  "./crates/*",
 ]
