--- a/crates/tac/Cargo.toml
+++ b/crates/tac/Cargo.toml
@@ -14,3 +14,9 @@ petgraph = "0.5"
 smol_str = "0.1"
 thunderdome = "0.4"
 tinyvec = {version = "1", features = ["alloc"]}
+
+[features]
+
+[build-dependencies]
+anyhow = "*"
+cbindgen = "0.17"
