--- a/crates/opt/Cargo.toml
+++ b/crates/opt/Cargo.toml
@@ -1,18 +1,11 @@
 [package]
 authors = ["Rynco Maekawa <lynzrand@outlook.com>"]
 edition = "2018"
-name = "azuki"
+name = "azuki-opt"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-azuki-syntax = {path = "crates/syntax"}
-azuki-tac = {path = "crates/tac"}
-azuki-tacgen = {path = "crates/tacgen"}
-
-[workspace]
-members = [
-  ".",
-  "./crates/*",
-]
+anymap = "0.12"
+azuki-tac = {path = "../tac"}
