--- a/crates/tac/Cargo.toml
+++ b/crates/tac/Cargo.toml
@@ -9,6 +9,7 @@ version = "0.1.0"
 [dependencies]
 anymap = "0.12"
 bit-set = "0.5.2"
+combine = "4.5"
 indexmap = "1"
 lexpr = "0.2.6"
 petgraph = "0.5"
