feat: Eliminate param

--- a/crates/tac/Cargo.toml
+++ b/crates/tac/Cargo.toml
@@ -10,6 +10,7 @@ version = "0.1.0"
 anymap = "0.12"
 bit-set = "0.5.2"
 combine = "4.5"
+enum-as-inner = "0.3"
 indexmap = "1"
 lexpr = "0.2.6"
 petgraph = "0.5"
