--- a/crates/tac/Cargo.toml
+++ b/crates/tac/Cargo.toml
@@ -14,6 +14,7 @@ enum-as-inner = "0.3"
 indexmap = "1"
 lexpr = "0.2.6"
 logos = "0.12"
+num = "0.3"
 petgraph = "0.5"
 smol_str = "0.1"
 thunderdome = "0.4"
