--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,12 @@ version = "0.1.0"
 default-run = "azuki"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+
+[profile.release]
+debug = 0
+lto = true
+opt-level = "z"
+
 [[bin]]
 name = "azvm"
 
