--- a/crates/tac/Cargo.toml
+++ b/crates/tac/Cargo.toml
@@ -13,7 +13,7 @@ combine = { version = "4.5", optional = true }
 enum-as-inner = "0.3"
 indexmap = "1"
 num = { version = "0.4", optional = true }
-petgraph = "0.5"
+petgraph = { version = "0.5", optional = true }
 smol_str = "0.1"
 thunderdome = "0.4"
 tinyvec = { version = "1", features = ["alloc"] }
@@ -21,3 +21,4 @@ tinyvec = { version = "1", features = ["alloc"] }
 [features]
 default = ["parser"]
 parser = ["combine", "num"]
+visit = ["petgraph"]
