--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Copy artifacts
         run: |
           mkdir dist
-          cp ./docs/book dist/book
-          cp ./target/doc dist/doc
+          cp -r ./docs/book dist/book
+          cp -r ./target/doc dist/doc
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
