feat: maybe add filetest later

--- a/crates/tac/Cargo.toml
+++ b/crates/tac/Cargo.toml
@@ -10,15 +10,17 @@ version = "0.1.0"
 anymap = "0.12"
 bit-set = "0.5.2"
 combine = { version = "4.5", optional = true }
+logos = { version = "0.12", optional = true }
 enum-as-inner = "0.3"
 indexmap = "1"
 num = { version = "0.4", optional = true }
 petgraph = { version = "0.5", optional = true }
 smol_str = "0.1"
 thunderdome = "0.4"
+thiserror = { version = "*", optional = true }
 tinyvec = { version = "1", features = ["alloc"] }
 
 [features]
 default = ["parser"]
-parser = ["combine", "num"]
+parser = ["combine", "num", "logos", "thiserror"]
 visit = ["petgraph"]
