--- a/crates/opt/Cargo.toml
+++ b/crates/opt/Cargo.toml
@@ -8,5 +8,6 @@ version = "0.1.0"
 
 [dependencies]
 anymap = "0.12"
-azuki-tac = {path = "../tac"}
+azuki-tac = { path = "../tac" }
 petgraph = "0.5"
+bit-set = "0.5.2"
