--- a/crates/tac/Cargo.toml
+++ b/crates/tac/Cargo.toml
@@ -9,8 +9,6 @@ version = "0.1.0"
 [dependencies]
 anymap = "0.12"
 bit-set = "0.5.2"
-combine = { version = "4.5", optional = true }
-logos = { version = "0.12", optional = true }
 enum-as-inner = "0.3"
 indexmap = "1"
 num = { version = "0.4", optional = true }
@@ -19,8 +17,9 @@ smol_str = "0.1"
 thunderdome = "0.4"
 thiserror = { version = "*", optional = true }
 tinyvec = { version = "1", features = ["alloc"] }
+lexpr = { version = "0.2", optional = true }
 
 [features]
 default = ["parser"]
-parser = ["combine", "num", "logos", "thiserror"]
+parser = ["num", "thiserror", "lexpr"]
 visit = ["petgraph"]
