--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ azuki-tacgen = { path = "crates/tacgen" }
 azuki-tacvm = { path = "crates/vm" }
 
 clap = "3.0.0-beta.2"
+tracing = "0.1"
+tracing-subscriber = "0.2"
 
 [workspace]
 members = [".", "./crates/*"]
