--- a/crates/tac/Cargo.toml
+++ b/crates/tac/Cargo.toml
@@ -14,7 +14,8 @@ indexmap = "1"
 num = { version = "0.4", optional = true }
 petgraph = { version = "0.5", optional = true }
 smol_str = "0.1"
-thunderdome = "0.4"
+# thunderdome = "0.4"
+slotmap = "1"
 thiserror = { version = "*", optional = true }
 tinyvec = { version = "1", features = ["alloc"] }
 lexpr = { version = "0.2", optional = true }
